# ai-agent-builder-pipeline

./: .coverage  .env.docker.example  .gitignore  Makefile  R3_test.md  README.md  docker-compose.yml  docker.sh  init.md  setup.md
backend/: .dockerignore  .env.example  .gitignore  CODE_REPOS_README.md  Dockerfile  Makefile  README.md  SWAGGER_R3_TEST_GUIDE.md  SWAGGER_TEST_GUIDE.md  TESTS_SETUP.md  TEST_COVERAGE_FINAL.md  TEST_COVERAGE_REPORT.md  VALIDATION_TESTS_REPORT.md  alembic.ini  docker-compose.yml  logging.json  main.py  pyproject.toml  pytest.ini  quick_update.sh  requirements.txt  setup.sh  start_worker.sh  test_celery_setup.sh  test_debug.py  test_r3_curl.sh  test_r3_curl_correct.sh  test_r3_example.py  test_r3_simplified.sh  update_requirements.py  update_requirements_simple.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_create_projects_and_requirements.py  002_create_qa_sessions.py  003_create_requirements_gateway_audit.py  004_create_code_repos.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/routes/: code_repos.py  gateway.py  projects.py  qa_sessions.py
backend/app/api/v1/: orchestration.py  plan.py  projects.py  prompts.py  requirements.py
backend/app/core/: __init__.py  config.py  database.py  logging_config.py  observability.py  redis_client.py  types.py
backend/app/middleware/: __init__.py  tracing.py
backend/app/models/: __init__.py  code_repo.py  enums.py  orchestration.py  plan.py  project.py  prompt.py  qa_session.py  requirement.py  types.py
backend/app/schemas/: __init__.py  code_repo.py  gateway.py  orchestration.py  plan.py  project.py  prompt.py  qa_session.py  requirement.py
backend/app/services/: __init__.py  analyst_service.py  code_repo_service.py  encryption_service.py  gateway_service.py  git_service.py  orchestration_service.py  plan_service.py  prompt_service.py  requirement_service.py  state_machine.py
backend/app/tasks/: analyst.py  git_clone.py
backend/app/utils/: __init__.py  security.py
backend/app/workers/: __init__.py  beat_schedule.py  celery_app.py
backend/c1_tests/: README.md  SWAGGER_C1_TEST_GUIDE.md  test_c1_basic.sh  test_c1_cleanup.sh  test_c1_direct.py  test_c1_e2e.sh
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_create_requirements_tables.py  002_create_plan_tables.py  003_create_prompt_tables.py  004_create_orchestration_tables.py
backend/r3_tests/: README.md  test_r3_direct.py  test_r3_e2e.py
backend/r4_tests/: CASCADE_DELETE_SAFETY.md  CLEANUP_GUIDE.md  DELETE_ENDPOINT_FIX.md  README.md  SWAGGER_R4_TEST_GUIDE.md  TEST_R4_README.md  test_r4_basic.sh  test_r4_cleanup.sh  test_r4_cleanup_all.sh  test_r4_direct.py  test_r4_e2e.sh
backend/tests/: conftest.py  test_code_repos.py  test_core_modules.py  test_database.py  test_encryption_service.py  test_git_service.py  test_observability.py  test_orchestration_api.py  test_orchestration_service.py  test_plan_api.py  test_plan_service.py  test_projects.py  test_prompt_service.py  test_prompts_api.py  test_qa_sessions.py  test_requirement_schemas.py  test_requirement_service.py  test_requirements_api.py  test_requirements_gateway.py  test_requirements_gateway_e2e.py  test_security.py  test_state_machine.py  test_state_machine_extended.py  test_types.py
backend/tests/unit_tests/: __init__.py  conftest.py  test_orchestration_service_unit.py  test_plan_service_unit.py  test_prompt_service_unit.py  test_requirement_service_unit.py  test_state_machine_unit.py
(+54 files in other folders)
